[package]
name = "nttp"
version = "0.1.0"
authors = ["Christoph Walcher <christoph-wa@gmx.de>"]
edition = "2018"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.6"
objc-foundation = "0.1.1"
block = "0.1.6"
objc_id = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
curl = "0.4.21"
libc = "0.2.55"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version="0.3.7", features = ["winhttp", "errhandlingapi", "libloaderapi"]}

